tests/rosetta/out/C/babylonian-spiral.error
cc: exit status 1
/tmp/babylonian-spiral.c: In function ‘push’:
/tmp/babylonian-spiral.c:157:12: error: request for member ‘len’ in something not a structure or union
  157 |   int i = h.len - 1;
      |            ^
/tmp/babylonian-spiral.c:158:20: error: request for member ‘data’ in something not a structure or union
  158 |   while (i > 0 && h.data[i - 1].data["s"] > h.data[i].data["s"]) {
      |                    ^
/tmp/babylonian-spiral.c:158:46: error: request for member ‘data’ in something not a structure or union
  158 |   while (i > 0 && h.data[i - 1].data["s"] > h.data[i].data["s"]) {
      |                                              ^
/tmp/babylonian-spiral.c:159:27: error: request for member ‘data’ in something not a structure or union
  159 |     map_string_int tmp = h.data[i - 1];
      |                           ^
/tmp/babylonian-spiral.c:160:6: error: request for member ‘data’ in something not a structure or union
  160 |     h.data[i - 1] = h.data[i];
      |      ^
/tmp/babylonian-spiral.c:160:22: error: request for member ‘data’ in something not a structure or union
  160 |     h.data[i - 1] = h.data[i];
      |                      ^
/tmp/babylonian-spiral.c:161:6: error: request for member ‘data’ in something not a structure or union
  161 |     h.data[i] = tmp;
      |      ^
/tmp/babylonian-spiral.c: In function ‘step’:
/tmp/babylonian-spiral.c:168:11: error: request for member ‘len’ in something not a structure or union
  168 |   while (h.len == 0 || nv * nv <= h.data[0].data["s"]) {
      |           ^
/tmp/babylonian-spiral.c:168:36: error: request for member ‘data’ in something not a structure or union
  168 |   while (h.len == 0 || nv * nv <= h.data[0].data["s"]) {
      |                                    ^
/tmp/babylonian-spiral.c:176:12: error: request for member ‘data’ in something not a structure or union
  176 |   int s = h.data[0].data["s"];
      |            ^
/tmp/babylonian-spiral.c:178:11: error: request for member ‘len’ in something not a structure or union
  178 |   while (h.len > 0 && h.data[0].data["s"] == s) {
      |           ^
/tmp/babylonian-spiral.c:178:24: error: request for member ‘data’ in something not a structure or union
  178 |   while (h.len > 0 && h.data[0].data["s"] == s) {
      |                        ^
/tmp/babylonian-spiral.c:179:26: error: request for member ‘data’ in something not a structure or union
  179 |     map_string_int it = h.data[0];
      |                          ^
/tmp/babylonian-spiral.c:180:43: error: request for member ‘len’ in something not a structure or union
  180 |     list_int tmp2 = slice_list_int(h, 1, h.len);
      |                                           ^
/tmp/babylonian-spiral.c:180:36: error: incompatible type for argument 1 of ‘slice_list_int’
  180 |     list_int tmp2 = slice_list_int(h, 1, h.len);
      |                                    ^
      |                                    |
      |                                    int
/tmp/babylonian-spiral.c:119:41: note: expected ‘list_int’ but argument is of type ‘int’
  119 | static list_int slice_list_int(list_int v, int start, int end) {
      |                                ~~~~~~~~~^
/tmp/babylonian-spiral.c:181:9: error: incompatible types when assigning to type ‘int’ from type ‘list_int’
  181 |     h = tmp2;
      |         ^~~~
/tmp/babylonian-spiral.c:261:10: error: incompatible types when returning type ‘tmp_item_t’ but ‘int’ was expected
  261 |   return (tmp_item_t){.d = best, .heap = h, .n = nv};
      |          ^
/tmp/babylonian-spiral.c: In function ‘positions’:
/tmp/babylonian-spiral.c:284:19: error: ‘heap’ undeclared (first use in this function)
  284 |     int st = step(heap, nv, tmp26);
      |                   ^~~~
/tmp/babylonian-spiral.c:284:19: note: each undeclared identifier is reported only once for each function it appears in
/tmp/babylonian-spiral.c:285:24: error: request for member ‘data’ in something not a structure or union
  285 |     dir = (list_int)(st.data["d"]);
      |                        ^
/tmp/babylonian-spiral.c:286:20: error: request for member ‘data’ in something not a structure or union
  286 |     heap = (int)(st.data["heap"]);
      |                    ^
/tmp/babylonian-spiral.c:287:18: error: request for member ‘data’ in something not a structure or union
  287 |     nv = (int)(st.data["n"]);
      |                  ^
